refactor(api): use ogen to generate API client
